--- a/_config.yml
+++ b/_config.yml
@@ -108,3 +108,6 @@ deploy:
   type: git
   repo: git@github.com:felix1982/felix.github.io.git
   branch: master
+
+admin:
+  deployCommand: './hexo-deploy'
